syntax = "proto3";
option csharp_namespace = "GrpcTest";
package test;

service ProbniServis {
	rpc ProbniPoziv (ProbnaPoruka) returns (ProbnaPoruka);
	rpc KorisnikTest (KorisnikPoruka) returns (KorisnikPoruka);
	rpc KorisnikStream (KorisnikPoruka) returns (stream KorisnikPoruka);
}

message ProbnaPoruka {
	string Nesto = 1;
	int32 NekiBroj = 2;
}

message KorisnikPoruka {
	string Ime = 1;
	string Prezime = 2;
	string ID = 3;
	repeated AdresaPoruka Adrese = 4;
}

message AdresaPoruka {
	int32 ID = 1;	
	string Ulica = 2;
	string Broj = 3;
}
